--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
+diesel = { version = "2.0", features = ["r2d2", "sqlite"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
