--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ diesel = { version = "2.0", features = ["r2d2", "sqlite"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 dotenv = "0.15"
+log = "0.4"
+env_logger = "0.10"
