--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -24,4 +24,4 @@ jobs:
       run: cargo build --release
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test -- --test-threads=1
